--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,13 @@ name: CI
 # Controls when the workflow will run
 on:
   push:
-    branches: [ master, develop ]
+    branches: 
+      - master
+      - develop 
   pull_request:
-    branches: [ master, develop ]
+    branches: 
+      - master
+      - develop
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
