turn off pytest on main.yml workflow to go for manual testing

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,6 @@ jobs:
           pip install -e .
           pip install -r requirements.txt
 
-      - name: Test
-        run: |
-          pytest
+#      - name: Test
+#        run: |
+#          pytest
