--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,7 @@
 name = "xsarsea"
 requires-python = ">= 3.10"
 license = { text = "MIT" }
-authors = [
-  { name = "Olivier Archer", email = "olivier.archer@ifremer.fr" },
-]
+authors = [{ name = "Olivier Archer", email = "olivier.archer@ifremer.fr" }]
 description = "Python xarray library to compute geophysical parameters (such as wind, waves or currents) from radar quantities"
 readme = "README.md"
 keywords = [
@@ -12,9 +10,9 @@ keywords = [
   "earth-observation",
   "remote-sensing",
   "satellite-imagery",
-    "ocean",
-    "wind",
-    "waves",
+  "ocean",
+  "wind",
+  "waves",
   "sar",
   "synthetic-aperture-radar",
 ]
@@ -33,17 +31,17 @@ dynamic = ["version"]
 dependencies = [
   "xarray>=2024.10.0",
   'numpy',
-'opencv-python',
-'importlib-resources',
-'fsspec',
-'aiohttp',
-'numba',
-'scipy',
-'pyyaml',
-'typer',
-'netCDF4',
-'matplotlib',
-'xrft'
+  'opencv-python',
+  'importlib-resources',
+  'fsspec',
+  'aiohttp',
+  'numba',
+  'scipy',
+  'pyyaml',
+  'typer',
+  'netCDF4',
+  'matplotlib',
+  'xrft',
 ]
 
 [project.urls]
@@ -60,7 +58,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 packages = ["xsarsea"]
-package-dir = {"" = "src"}
+package-dir = { "" = "src" }
 
 [tool.setuptools_scm]
 fallback_version = "999"
@@ -82,3 +80,32 @@ branch = true
 [tool.coverage.report]
 show_missing = true
 exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
+
+[tool.ruff.lint]
+ignore = [
+  "E402",  # module level import not at top of file
+  "E501",  # line too long - let black worry about that
+  "E731",  # do not assign a lambda expression, use a def
+  "UP038", # type union instead of tuple for isinstance etc
+]
+select = [
+  "F",   # Pyflakes
+  "E",   # Pycodestyle
+  "I",   # isort
+  "UP",  # Pyupgrade
+  "TID", # flake8-tidy-imports
+  "W",
+]
+extend-safe-fixes = [
+  "TID252", # absolute imports
+  "UP031",  # percent string interpolation
+]
+fixable = ["I", "TID252", "UP"]
+
+[tool.ruff.lint.isort]
+known-first-party = ["xsarsea"]
+known-third-party = ["xarray", "toolz", "construct"]
+
+[tool.ruff.lint.flake8-tidy-imports]
+# Disallow all relative imports.
+ban-relative-imports = "all"
