--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ dependencies = [
   'typer',
   'dask',
   'matplotlib',
-  'h5netcdf'
+  'h5netcdf',
 ]
 [project.optional-dependencies]
 XSAR = ["xsar"]
